; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sgi-ip22/extr_ip22-int.c_enable_local3_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sgi-ip22/extr_ip22-int.c_enable_local3_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@SGI_MAP_1_IRQ = common dso_local global i32 0, align 4
@SGINT_LOCAL1 = common dso_local global i32 0, align 4
@sgint = common dso_local global %struct.TYPE_2__* null, align 8
@SGINT_LOCAL3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @enable_local3_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_local3_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @SGI_MAP_1_IRQ, align 4
  %4 = load i32, i32* @SGINT_LOCAL1, align 4
  %5 = sub nsw i32 %3, %4
  %6 = shl i32 1, %5
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sgint, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @SGINT_LOCAL3, align 4
  %13 = sub i32 %11, %12
  %14 = shl i32 1, %13
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sgint, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
